--- a/game1/tetris.html
+++ b/game1/tetris.html
@@ -7,6 +7,7 @@
   <title>Tetris | 前月祭 宝探し企画</title>
   <link rel="stylesheet" href="../css/reset.css" />
   <link rel="stylesheet" href="tetrisStyle.css" />
+  <link rel="stylesheet" href="tetris-gestures.css">
 </head>
 
 <body>
@@ -48,6 +49,7 @@
   </div>
 
   <script src="tetris.js"></script>
+  <script src="tetris-gestures.js"></script>
 </body>
 
 </html>
