--- a/game1/tetris.html
+++ b/game1/tetris.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
   <title>Tetris | 前月祭 宝探し企画</title>
   <link rel="stylesheet" href="../css/reset.css" />
+  <link rel="stylesheet" href="../css/treasurehunt.css" />
   <link rel="stylesheet" href="tetrisStyle.css" />
-  <link rel="stylesheet" href="tetris-gestures.css">
 </head>
 
 <body>
-  <div id="goalbar" aria-live="polite">10ライン消したらクリア</div>
+  <div id="goalbar" aria-live="polite">7ライン消したらクリア</div>
 
   <canvas id="board" aria-label="Tetris board"></canvas>
 
@@ -24,9 +24,17 @@
 
   <div id="splash" role="dialog" aria-modal="true">
     <div class="splash-card">
-      <img src="../image/tetris.png" alt="Tetris" />
+      <img src="../image/tetris.png" alt="Tetris" class="tetris-logo" onerror="this.style.display='none'" />
       <h1>TETRIS</h1>
-      <p class="splash-cond">勝利条件：<strong>10ライン</strong>消したらクリア</p>
+      <p class="splash-cond">勝利条件：<strong>7ライン</strong>消したらクリア</p>
+      <div class="touch-help" role="note" aria-live="polite">
+        <ul>
+          <li><b>タップ</b>: 回転</li>
+          <li><b>左右スワイプ</b>: 横移動</li>
+          <li><b>長押し</b>: 早く落とす</li>
+        </ul>
+      </div>
+
       <p class="splash-sub">タップして開始</p>
       <button id="startGame" class="btn-primary">PLAY</button>
     </div>
@@ -35,7 +43,7 @@
   <div id="clearSplash" role="dialog" aria-modal="true" class="hidden">
     <div class="win-card">
       <h2 class="win-title">🎉 クリア！</h2>
-      <p class="win-desc">10ライン達成しました。<br>「宝箱を受け取る」を押して進んでください。</p>
+      <p class="win-desc">7ライン達成しました。<br>「宝箱を受け取る」を押して進んでください。</p>
       <button id="claimBtn" class="btn-primary">宝箱を受け取る</button>
     </div>
   </div>
@@ -43,13 +51,12 @@
   <div id="overSplash" role="dialog" aria-modal="true" class="hidden">
     <div class="over-card">
       <h2 class="over-title">💥 ゲームオーバー</h2>
-      <p class="over-desc">もう一度挑戦しますか？</p>
+      <p class="over-desc">もう一度挑戦してみよう！</p>
       <button id="retryBtn" class="btn-primary">もう一度プレイ</button>
     </div>
   </div>
 
   <script src="tetris.js"></script>
-  <script src="tetris-gestures.js"></script>
 </body>
 
 </html>
