--- a/tutorial.html
+++ b/tutorial.html
@@ -14,7 +14,7 @@
 <body class="center-page">
   <a class="skip-link" href="#main">コンテンツへスキップ</a>
 
-<header class="header" role="banner">
+  <header class="header" role="banner">
     <div class="container flex-between">
       <div class="brand">
         <img class="logo-mark" src="./image/treasure_icon_2.png" width="36" height="36" alt="宝探しロゴ">
@@ -23,7 +23,7 @@
     </div>
   </header>
 
-  
+
 
   <main id="main" role="main">
     <div class="center-card narrow">
@@ -31,9 +31,11 @@
       <section class="section-block" id="howto-block" aria-labelledby="ttl-howto">
         <h2 id="ttl-howto" class="section-title">遊び方</h2>
         <ol class="steps">
-          <li>グランエミオ所沢かシティタワー所沢クラッシィのいずれかの探索をします。</li>
-          <li>ミニゲームをプレイします。クリアでお宝を獲得できます。</li>
-          <li>獲得したらお得なクーポン券と交換できます。</li>
+          <li>グランエミオ所沢かシティタワー所沢クラッシィのいずれかの探索をしてもらいます</li>
+          <li>ミニゲームをプレイします。クリアでお宝を獲得できます</li>
+          <li>獲得したらお得なクーポン券と交換できます</li>
+          <li>・グランエミオ所沢：輪投げ50円引きクーポン券</li>
+          <li>・シティタワー所沢クラッシィ：レモンスカッシュ50円引クーポン券</li>
         </ol>
       </section>
 
@@ -55,10 +57,10 @@
     </div>
   </main>
 
-  
+
 
   <script type="module" src="./js/tutorial.js"></script>
-<footer class="footer">
+  <footer class="footer">
     <p>2025 所沢キャンパス祭 宝探し企画</p>
   </footer>
 
