--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>
           宝探し企画へようこそ！<br>お宝を集めてお得なクーポン券を<br>ゲットしよう!
         </p>
-        <a href="register.html" class="btn-primary">ゲームをスタート</a>
+        <a href="register.html" class="btn-primary">ゲームスタート</a>
       </div>
     </section>
 
@@ -61,11 +61,11 @@
       <div class="container">
         <h2>ルール</h2>
         <ul>
-          <li>参加は無料、スマートフォンが必要です</li>
-          <li>歩行中のスマホ操作は禁止です</li>
-          <li>1グループ1回だけ参加可能です。2回目はプレイできないようになっています。</li>
-          <li>ヒントやお宝の場所をSNSに公開しないでください</li>
-          <li>制限時間はイベント終了時刻(17:00)までです</li>
+          <li>参加は無料、スマートフォンが必要。</li>
+          <li>歩行中のスマホ操作は禁止。</li>
+          <li>1グループ1回だけ参加可能。2回目以降のプレイはできません。</li>
+          <li>ヒントやお宝の場所をSNSに公開しない。</li>
+          <li>制限時間はイベント終了時刻まで。</li>
         </ul>
       </div>
     </section>
@@ -90,7 +90,7 @@
     <p>2025 所沢キャンパス祭 宝探し企画</p>
   </footer>
 
-  <script type="module" src="../js/index.js"></script>
+  <script type="module" src="./js/index.js"></script>
 </body>
 
 </html>
