--- a/tutorial.html
+++ b/tutorial.html
@@ -35,7 +35,7 @@
           <li>ミニゲームをプレイします。クリアでお宝を獲得できます</li>
           <li>獲得したらお得なクーポン券と交換できます</li>
           <li>・グランエミオ所沢：輪投げ50円引きクーポン券</li>
-          <li>・シティタワー所沢クラッシィ：レモンスカッシュ50円引クーポン券</li>
+          <li>・シティタワー所沢クラッシィ：レモンスカッシュ50円引きクーポン券</li>
         </ol>
       </section>
 
