--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <ul>
           <li>参加は無料、スマートフォンが必要。</li>
           <li>歩行中のスマホ操作は禁止。</li>
-          <li>1グループ1回だけ参加可能。2回目以降のプレイはできません。</li>
+          <li>1グループ1回だけ参加可能。<br>2回目以降のプレイはできません。</li>
           <li>ヒントやお宝の場所をSNSに公開しない。</li>
           <li>制限時間はイベント終了時刻まで。</li>
         </ul>
