--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       <div class="container">
         <h2>遊び方</h2>
         <ol>
-          <li>マップのヒントを頼りにお宝を探す</li>
-          <li>隠されているQRコードを見つけてスキャン</li>
-          <li>ミニゲームをクリアしてお宝をゲット</li>
-          <li>お宝を見つけ出してお得なクーポン券をゲットしよう！</li>
+          <li>マップを見ながらお宝を探す</li>
+          <li>QRコードを見つけてスキャン</li>
+          <li>ミニゲームクリアで宝ゲット</li>
+          <li>お宝を見つけ出してお得な<br>クーポン券をゲットしよう！</li>
         </ol>
       </div>
     </section>
@@ -61,9 +61,8 @@
       <div class="container">
         <h2>ルール</h2>
         <ul>
-          <li>参加は無料、スマートフォンが必要。</li>
           <li>歩行中のスマホ操作は禁止。</li>
-          <li>1グループ1回だけ参加可能。<br>2回目以降のプレイはできません。</li>
+          <li>1グループ1回だけ参加可能。<br>2回目以降のプレイはできない。</li>
           <li>ヒントやお宝の場所をSNSに公開しない。</li>
           <li>制限時間はイベント終了時刻まで。</li>
         </ul>
@@ -80,8 +79,9 @@
     <section id="contact" class="section">
       <div class="container">
         <h2>お問い合わせ</h2>
-        <p>主催：所沢キャンパス祭実行委員会 企画開発局 宝探し企画担当</p>
-        <p>本部電話番号：</p>
+        <p>主催</p>
+        <p>所沢キャンパス祭実行委員会</p>
+        <p>本部電話番号</p>
       </div>
     </section>
   </main>
