--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       <div class="container">
         <h2>ルール</h2>
         <ul>
-          <li>歩行中のスマホ操作は禁止。</li>
-          <li>1グループ1回だけ参加可能。<br>2回目以降のプレイはできない。</li>
-          <li>ヒントやお宝の場所をSNSに公開しない。</li>
-          <li>制限時間はイベント終了時刻まで。</li>
+          <li>歩行中のスマホ操作は禁止</li>
+          <li>1グループ1回だけ参加可能</li>
+          <li>ヒントやお宝の場所をSNSに公開しない</li>
+          <li>制限時間はイベント終了時刻まで</li>
         </ul>
       </div>
     </section>
