--- a/qr.html
+++ b/qr.html
@@ -39,7 +39,7 @@
     </div>
 
     <p id="goalNote" class="hidden" style="margin:12px 0 0; color:#5a7d70;">
-      お宝を見つけました！<br>ゴールへ進んでクーポンを受け取ってください。
+      お宝を見つけました！<br>ゴールへ進んでクーポンを<br>受け取ってください。
     </p>
     </div>
   </main>
