--- a/tutorial.html
+++ b/tutorial.html
@@ -31,11 +31,10 @@
       <section class="section-block" id="howto-block" aria-labelledby="ttl-howto">
         <h2 id="ttl-howto" class="section-title">遊び方</h2>
         <ol class="steps">
-          <li>グランエミオ所沢かシティタワー所沢クラッシィのいずれかの探索をしてもらいます</li>
-          <li>ミニゲームをプレイします。クリアでお宝を獲得できます</li>
+          <li>グランエミオ所沢か<br>シティタワー所沢クラッシィの<br>いずれかの探索をしてもらいます</li>
+          <li>QR発見でミニゲームをプレイします。クリアでお宝を獲得できます</li>
           <li>獲得したらお得なクーポン券と交換できます</li>
-          <li>・グランエミオ所沢：輪投げ50円引きクーポン券</li>
-          <li>・シティタワー所沢クラッシィ：レモンスカッシュ50円引きクーポン券</li>
+          <li>グランエミオ所沢では輪投げ50円引きクーポン券、シティタワー所沢クラッシィではレモンスカッシュ50円引きクーポン券が貰えます</li>
         </ol>
       </section>
 
@@ -44,9 +43,9 @@
       <section class="section-block" id="safety-block" aria-labelledby="ttl-safety">
         <h2 id="ttl-safety" class="section-title">安全に楽しむために</h2>
         <ul class="bullets">
-          <li>歩きスマホは禁止です。周囲に注意しましょう。</li>
+          <li>歩きスマホは禁止です。<br>周囲に注意しましょう。</li>
           <li>施設・店舗の迷惑にならないようにお願いします。</li>
-          <li>お困りの点があれば気軽にスタッフへ声かけをお願いします。</li>
+          <li>お困りの点があれば気軽に<br>スタッフへ声かけをお願いします。</li>
         </ul>
       </section>
 
