--- a/tutorial.html
+++ b/tutorial.html
@@ -8,6 +8,7 @@
   <meta name="description" content="早稲田大学 所沢キャンパス祭 宝探し企画">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/treasurehunt.css" />
+  <link rel="stylesheet" href="./css/tutorial.css">
   <meta name="theme-color" content="#155419" />
 </head>
 
@@ -59,6 +60,7 @@
 
 
   <script type="module" src="./js/tutorial.js"></script>
+  <script type="module" src="./js/tutorial-ux.js"></script>
   <footer class="footer">
     <p>2025 所沢キャンパス祭 宝探し企画</p>
   </footer>
