--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="description" content="早稲田大学 所沢キャンパス祭 宝探し企画" />
   <title>前月祭 宝探し企画 | 所沢キャンパス祭</title>
   <link rel="stylesheet" href="./css/reset.css">
