--- a/qr.html
+++ b/qr.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>お宝獲得 | 前月祭 宝探し企画</title>
   <meta name="description" content="早稲田大学 所沢キャンパス祭 宝探し企画">
   <link rel="stylesheet" href="./css/reset.css" />
@@ -41,7 +41,6 @@
     <p id="goalNote" class="hidden" style="margin:12px 0 0; color:#5a7d70;">
       お宝を見つけました！<br>ゴールへ進んでクーポンを<br>受け取ってください。
     </p>
-    </div>
   </main>
 
 
