--- a/tutorial.html
+++ b/tutorial.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>遊び方 | 前月祭 宝探し企画</title>
   <meta name="description" content="早稲田大学 所沢キャンパス祭 宝探し企画">
   <link rel="stylesheet" href="./css/reset.css">
@@ -28,28 +28,28 @@
 
   <main id="main" role="main">
     <div class="center-card narrow">
+      <div class="tutorial">
+        <section class="section-block" id="howto-block" aria-labelledby="ttl-howto">
+          <h2 id="ttl-howto" class="section-title">遊び方</h2>
+          <ol class="steps">
+            <li>グランエミオ所沢かシティタワー所沢クラッシィのいずれかの探索をしてもらいます</li>
+            <li>QR発見でミニゲームをプレイします。クリアでお宝を獲得できます</li>
+            <li>獲得したらお得なクーポン券と交換できます</li>
+            <li>グランエミオ所沢で輪投げ50円引きクーポン券、シティタワー所沢クラッシィでレモンスカッシュ50円引きクーポン券を配布します</li>
+          </ol>
+        </section>
 
-      <section class="section-block" id="howto-block" aria-labelledby="ttl-howto">
-        <h2 id="ttl-howto" class="section-title">遊び方</h2>
-        <ol class="steps">
-          <li>グランエミオ所沢かシティタワー所沢クラッシィのいずれかの探索をしてもらいます</li>
-          <li>QR発見でミニゲームをプレイします。クリアでお宝を獲得できます</li>
-          <li>獲得したらお得なクーポン券と交換できます</li>
-          <li>グランエミオ所沢で輪投げ50円引きクーポン券、シティタワー所沢クラッシィでレモンスカッシュ50円引きクーポン券を配布します</li>
-        </ol>
-      </section>
+        <div class="section-sep" aria-hidden="true"></div>
 
-      <div class="section-sep" aria-hidden="true"></div>
-
-      <section class="section-block" id="safety-block" aria-labelledby="ttl-safety">
-        <h2 id="ttl-safety" class="section-title">安全に楽しむために</h2>
-        <ul class="bullets">
-          <li>歩きスマホは禁止です<br>周囲に注意しましょう</li>
-          <li>施設・店舗の迷惑にならないようにお願いします</li>
-          <li>お困りの点があれば気軽に<br>スタッフへ声かけをお願いします</li>
-        </ul>
-      </section>
-
+        <section class="section-block" id="safety-block" aria-labelledby="ttl-safety">
+          <h2 id="ttl-safety" class="section-title">安全に楽しむために</h2>
+          <ul class="bullets">
+            <li>歩きスマホは禁止です<br>周囲に注意しましょう</li>
+            <li>施設・店舗の迷惑にならないようにお願いします</li>
+            <li>お困りの点があれば気軽に<br>スタッフへ声かけをお願いします</li>
+          </ul>
+        </section>
+      </div>
       <div class="cta-row">
         <button id="startBtn" class="btn-start btn--wide">宝探しスタート！</button>
       </div>
