--- a/verify.html
+++ b/verify.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>引き換え確認 | 前月祭 宝探し企画（スタッフ用）</title>
   <meta name="description" content="早稲田大学 所沢キャンパス祭 宝探し企画">
   <link rel="stylesheet" href="./css/reset.css" />
@@ -117,22 +117,21 @@
 
       <dl class="result" style="margin:.8rem 0 1rem;">
         <div class="result__row">
-          <div class="result__row">
-            <dt>チーム</dt>
-            <dd id="vTeam">-</dd>
-          </div>
-          <div class="result__row">
-            <dt>人数</dt>
-            <dd id="vMembers">-</dd>
-          </div>
-          <div class="result__row">
-            <dt>所要時間</dt>
-            <dd id="vElapsed">-</dd>
-          </div>
-          <div class="result__row">
-            <dt>引き換え状況</dt>
-            <dd id="vRedeemed">-</dd>
-          </div>
+          <dt>チーム</dt>
+          <dd id="vTeam">-</dd>
+        </div>
+        <div class="result__row">
+          <dt>人数</dt>
+          <dd id="vMembers">-</dd>
+        </div>
+        <div class="result__row">
+          <dt>所要時間</dt>
+          <dd id="vElapsed">-</dd>
+        </div>
+        <div class="result__row">
+          <dt>引き換え状況</dt>
+          <dd id="vRedeemed">-</dd>
+        </div>
       </dl>
 
       <div id="actionArea" style="display:flex;gap:10px;flex-wrap:wrap">
