--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>参加受付 | 前月祭 宝探し企画</title>
   <meta name="description" content="早稲田大学 所沢キャンパス祭 宝探し企画">
   <link rel="stylesheet" href="./css/reset.css">
