--- a/goal.html
+++ b/goal.html
@@ -29,6 +29,10 @@
       <div class="time" id="timeDisplay">計測中…</div>
       <dl class="result" style="margin:.6rem 0 1rem;">
         <div class="result__row">
+          <dt>宝</dt>
+          <dd id="resultTreasures">-</dd>
+        </div>
+        <div class="result__row">
           <dt>チーム</dt>
           <dd id="resultTeam">-</dd>
         </div>
