--- a/verify.html
+++ b/verify.html
@@ -117,12 +117,20 @@
 
       <dl class="result" style="margin:.8rem 0 1rem;">
         <div class="result__row">
+          <dt>UID</dt>
+          <dd id="vUid">-</dd>
+        </div>
+        <div class="result__row">
           <dt>チーム</dt>
           <dd id="vTeam">-</dd>
         </div>
         <div class="result__row">
           <dt>人数</dt>
           <dd id="vMembers">-</dd>
+        </div>
+        <div class="result__row">
+          <dt>達成数</dt>
+          <dd id="vFound">-</dd>
         </div>
         <div class="result__row">
           <dt>所要時間</dt>
