--- a/goal.html
+++ b/goal.html
@@ -64,6 +64,7 @@
     </div>
   </main>
 
+  <script src="https://unpkg.com/qrcode@1.5.3/build/qrcode.min.js" defer></script>
   <script type="module" src="./js/goal.js"></script>
   <footer class="footer">
     <p>2025 所沢キャンパス祭 宝探し企画</p>
